--- a/views/home.html
+++ b/views/home.html
@@ -17,10 +17,10 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <!--
-            <li><a href="./reglog.html">注册</a></li>
-            <li><a href="./reglog.html">登录</a></li>
-            -->
+
+            <!--<li><a href="./reglog.html">注册</a></li>-->
+            <!--<li><a href="./reglog.html">登录</a></li>-->
+
             <li id="naviNickName"></li>
             <li><a href="/logout" id="_logout">注销</a></li>
             <li class="navi-avatar" id="naviAvatar">
@@ -41,7 +41,7 @@
         </div>
         <h3>文章列表：</h3>
         <div class="list" id="list">
-          <!--
+
 
           <div class="list-item">
             <div class="list-user">
@@ -66,7 +66,7 @@
             </div>
             <div class="list-content">跨浏览器展现我们总结的最佳实践是：强烈建议尽可能使用元素来获得在各个浏览器上获得相匹配的绘制效果。另外，我们还发现了 Firefox版本的浏览器上出现的一个 bug，其表现是：阻止我们为基于元素所创建的按钮设置 line-height 属性，这就导致在 Firefo浏览器上不能完全和其他按钮保持一致的高度。</div>
           </div>
-          -->
+
 
         </div>
         <div class="loadmore" id="loadmore">加载更多</div>
@@ -75,7 +75,7 @@
         <div class="notice">
           <h3>通知列表：</h3>
           <div id="notice">
-            <!--
+
             <div class="alert alert-info alert-dismissible" role="alert">
               <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <strong>Warning!</strong> Better check yourself, you're not looking too good.
@@ -88,13 +88,13 @@
               <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <strong>Warning!</strong> Better check yourself, you're not looking too good.
             </div>
-            -->
+
           </div>
         </div>
         <div class="userlist">
           <h3>用户列表：</h3>
           <div id="userlist">
-            <!--
+
             <div class="user">
               <div class="avatar"></div>
               <div class="nickname">桂林</div>
@@ -110,7 +110,7 @@
               <div class="nickname">桂林</div>
               <div class="follow" data-userId="1">+ 关注</div>
             </div>
-            -->
+
           </div>
         </div>
       </section>
